--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Adam Szaruga",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^6.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "pg": "^8.7.3",
